back/tests/core/dependency_graph/c_sharp/fixtures/syntax_errors/has_syntax_error.cs
public class Person
{
    public string Name;
    public Person(string name syntax_error)
    {
        Name = name;
    }
}
